# wsgiref-fake

./: .bumpversion.cfg  .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
tests/: conftest.py  test_basic.py
wsgiref_fake/: const.py  handlers.py  server.py  socket.py
wsgiref_fake/http/: client.py
wsgiref_fake/websocket/: client.py  geventclient.py  handlers.py  websocket.py
