[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project]
name = "wsgiref-fake"
dynamic = ["version"]
description = "In-process WSGI HTTP and WebSocket test doubles (fake sockets, no listening port)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["six>=1.12.0"]
authors = [{ name = "Alexey Dalekin" }]
keywords = ["wsgi", "testing", "websocket", "fake", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/adalekin/wsgiref-fake"
Repository = "https://github.com/adalekin/wsgiref-fake"
Issues = "https://github.com/adalekin/wsgiref-fake/issues"

[project.optional-dependencies]
gevent = [
    "gevent>=1.3.6",
    "gevent-websocket==0.9.5",
]
ws4py = ["ws4py>=0.5.1"]

[tool.hatch.version]
path = "wsgiref_fake/__init__.py"
pattern = "VERSION = ['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.sdist]
include = ["/wsgiref_fake", "/tests", "/README.md", "/LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["wsgiref_fake"]

[dependency-groups]
dev = ["pytest>=9.0.0", "pytest-cov>=7.0.0", "ruff>=0.14.0"]

[tool.pytest.ini_options]
addopts = "-vvv --cov=wsgiref_fake --cov-config=.coveragerc"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF", "PT", "BLE"]

[tool.ruff.lint.isort]
known-first-party = ["wsgiref_fake"]

[tool.uv]
default-groups = ["dev"]
